# ComfyUI_MagicClothing

./: README.md  __init__.py  fullbody_ipadaterfaceid_workflow.json  ipadapter_faceid_openpose_workflow.json  ipadapter_faceid_workflow.json  lower&full_body_workflow.json  magic_clothing_workflow.json  nodes.py  pyproject.toml  requirements.txt
assets/: cloth_inpainting_workflow.json  magic_clothing_animatediff_workflow.json  magic_clothing_workflow.json
garment_adapter/: attention_processor.py  garment_diffusion.py  garment_ipadapter_faceid.py
pipelines/: OmsDiffusionControlNetPipeline.py
