[project]
name = "comfyui_magicclothing"
description = "implementation of MagicClothing with garment and prompt in ComfyUI"
version = "1.0.0"
license = "LICENSE"
dependencies = ["insightface==0.7.3", "onnxruntime-gpu==1.17.1", "--extra-index-url https://download.pytorch.org/whl/cu118", "torch==2.1.1+cu118", "torchvision==0.16.1+cu118", "numpy==1.25.1", "diffusers==0.26.2", "opencv-python==4.9.0.80", "transformers==4.31.0", "safetensors==0.3.1", "controlnet-aux==0.0.6", "accelerate==0.21.0"]

[project.urls]
Repository = "https://github.com/frankchieng/ComfyUI_MagicClothing"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "Frank Chieng"
DisplayName = "ComfyUI_MagicClothing"
Icon = ""
